@@ -228,6 +228,7 @@
             <option>--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
             <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
             <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
+            <option>--enable-native-access=javafx.graphics</option>
           </options>
         </configuration>
       </plugin>
